Story:  Add intelligent auto-dummy support for testing. [2076]
git-svn-id: https://geekscape.org/svn/boost/trunk@2362 05db6a09-9903-0410-bedf-ba9bc4063e48